testsuite/veronac/codegen/compile-fail/main-method-missing.verona
// Copyright Microsoft and Project Verona Contributors.
// SPDX-License-Identifier: MIT
// CHECK-L: main-method-missing.verona:${LINE:+1}:7: error: Class 'Main' does not have a 'main' method
class Main { }
